fixed spacing of footer

--- a/art-gallery/src/App.css
+++ b/art-gallery/src/App.css
@@ -23,7 +23,6 @@ p {
   justify-content: space-between;
   height: 24% ;
   width: 9%;
-  margin-left: 32.8%;
 }
 
 .icon {
